linux + jvm command